# interlude_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: authorization.rs  config.rs  connection_utils.rs  lib.rs  link_type.rs  main.rs  share_link.rs
src/api/: apple_music.rs  authorization.rs  common.rs  conversion.rs  deezer.rs  mod.rs  spotify.rs  tidal.rs
src/server/: authorization.rs  connection_utils.rs  lib.rs  mod.rs  public_utils.rs
src/shared_item/: album.rs  artist.rs  mod.rs  norm.rs  song.rs
tests/: authorization_test.rs  convert_links.rs  parse_share_links.rs
