[package]
name = "interlude"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rust_iso3166 = "0.1"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [ "blocking" ] }
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
