[package]
name = "interlude"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
rust_iso3166 = "0.1"
urlencoding = "2"
toml = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = [ "json" ] }
regex = "1"
unicode-normalization = "0.1"
once_cell = "1"
hyper = { version = "1.6.0", features = ["full"] }
http-body-util = "0.1.3"
base64 = "0.22.1"
hyper-util = "0.1.16"
tokio = { version = "1", features = [ "full" ] }
iso8601 = "0.6"
